[gd_scene load_steps=27 format=3 uid="uid://by0o23i3me25s"]

[ext_resource type="Script" path="res://Scripts/spawn_room.gd" id="1_gy4y7"]
[ext_resource type="Texture2D" uid="uid://wkad05jc8ukb" path="res://Arts/spawn/corridor1.png" id="2_6v63r"]
[ext_resource type="Texture2D" uid="uid://cw1c3m82epyqr" path="res://Arts/spawn/spawn_room1.png" id="2_ilyup"]
[ext_resource type="Texture2D" uid="uid://cxd7sdqr0m8fo" path="res://Arts/spawn/spawn_room2.png" id="3_barb8"]
[ext_resource type="Texture2D" uid="uid://bkej7w2lgh4q6" path="res://Arts/spawn/corridor2.png" id="3_o3mh5"]
[ext_resource type="Texture2D" uid="uid://dbjk4r18otcpg" path="res://Arts/directions/direction_sign_a1.png" id="4_2w8wu"]
[ext_resource type="Texture2D" uid="uid://b6bae6synq2q7" path="res://Arts/spawn/corridor3.png" id="4_wsvdr"]
[ext_resource type="Texture2D" uid="uid://eiu47cpfja8l" path="res://Arts/directions/direction_sign_a2.png" id="5_i6gpn"]
[ext_resource type="Texture2D" uid="uid://bw4o60q57ngyt" path="res://Arts/spawn/spawn_room3.png" id="7_4rq5m"]
[ext_resource type="Texture2D" uid="uid://clkp7nsvbx04k" path="res://Arts/spawn/tutorial_room1.png" id="7_da234"]
[ext_resource type="Texture2D" uid="uid://i6jyaxrw1a04" path="res://Arts/spawn/spawn_room4.png" id="8_18pq3"]
[ext_resource type="Texture2D" uid="uid://clfa4wx3g1bip" path="res://Arts/spawn/tutorial_room2.png" id="8_gojvn"]
[ext_resource type="Texture2D" uid="uid://c123hvbnd1hj4" path="res://Arts/spawn/spawn_room5.png" id="9_6le5v"]
[ext_resource type="Texture2D" uid="uid://e86pctcm00i" path="res://Arts/spawn/spawn_room6.png" id="10_qn3p5"]
[ext_resource type="Texture2D" uid="uid://bkydy08vcu1vq" path="res://Arts/spawn/spawn_room7.png" id="11_7bwlf"]
[ext_resource type="Script" path="res://Scripts/navigation_in_room.gd" id="11_vpbg2"]
[ext_resource type="Texture2D" uid="uid://7nbrwfitafi6" path="res://Arts/spawn/spawn_room8.png" id="12_j0r58"]
[ext_resource type="Texture2D" uid="uid://2qilftnm7y1r" path="res://Arts/directions/direction_sign_a3.png" id="12_pq630"]
[ext_resource type="Texture2D" uid="uid://d2xtivpf6a11u" path="res://Arts/directions/direction_sign_a6.png" id="13_b2t44"]
[ext_resource type="Texture2D" uid="uid://csa5v7xfkuw1d" path="res://Arts/directions/direction_sign_a4.png" id="13_xhcgn"]
[ext_resource type="PackedScene" uid="uid://do3hoaamcl58p" path="res://Scenes/Token.tscn" id="14_mhrhf"]
[ext_resource type="Texture2D" uid="uid://cstgruf7x1uhe" path="res://Arts/spawn/tutorial_room_text.png" id="18_qee0c"]

[sub_resource type="SpriteFrames" id="SpriteFrames_umtbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6v63r")
}, {
"duration": 1.0,
"texture": ExtResource("3_o3mh5")
}, {
"duration": 1.0,
"texture": ExtResource("4_wsvdr")
}],
"loop": true,
"name": &"corridor",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ilyup")
}, {
"duration": 1.0,
"texture": ExtResource("3_barb8")
}, {
"duration": 1.0,
"texture": ExtResource("7_4rq5m")
}, {
"duration": 1.0,
"texture": ExtResource("8_18pq3")
}],
"loop": true,
"name": &"spawn",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_6le5v")
}, {
"duration": 1.0,
"texture": ExtResource("10_qn3p5")
}, {
"duration": 1.0,
"texture": ExtResource("11_7bwlf")
}, {
"duration": 1.0,
"texture": ExtResource("12_j0r58")
}],
"loop": true,
"name": &"spawn_again",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_da234")
}, {
"duration": 1.0,
"texture": ExtResource("8_gojvn")
}],
"loop": true,
"name": &"tutorial",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_u0mtp"]
resource_name = "fade"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.53333, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pigab"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0335c"]
_data = {
"RESET": SubResource("Animation_pigab"),
"fade": SubResource("Animation_u0mtp")
}

[node name="SpawnRoom" type="Node2D"]
script = ExtResource("1_gy4y7")

[node name="SpawnView" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="SpawnView"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_umtbs")
animation = &"spawn"
autoplay = "spawn"
centered = false

[node name="Nav0" type="TextureButton" parent="SpawnView"]
offset_left = 729.0
offset_top = 333.0
offset_right = 811.0
offset_bottom = 375.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_2w8wu")
texture_hover = ExtResource("13_xhcgn")
script = ExtResource("11_vpbg2")
location = "spawn"
destination = "tutorial"

[node name="TutorialView" type="Node2D" parent="."]
position = Vector2(37, -45)
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="TutorialView"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_umtbs")
animation = &"tutorial"
centered = false

[node name="Notes" type="Sprite2D" parent="TutorialView"]
position = Vector2(773, 123)
rotation = 0.261799
scale = Vector2(2, 2)
texture = ExtResource("18_qee0c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TutorialView/Notes"]
libraries = {
"": SubResource("AnimationLibrary_0335c")
}
autoplay = "fade"
speed_scale = 0.5

[node name="Nav1" type="TextureButton" parent="TutorialView"]
offset_left = 30.0
offset_top = 399.0
offset_right = 112.0
offset_bottom = 441.0
texture_normal = ExtResource("4_2w8wu")
texture_hover = ExtResource("13_xhcgn")
flip_h = true
script = ExtResource("11_vpbg2")
location = "tutorial"
destination = "spawn"

[node name="Nav2" type="TextureButton" parent="TutorialView"]
offset_left = 843.0
offset_top = 397.0
offset_right = 925.0
offset_bottom = 439.0
texture_normal = ExtResource("12_pq630")
texture_hover = ExtResource("13_b2t44")
script = ExtResource("11_vpbg2")
location = "tutorial"
destination = "corridor"

[node name="Token" parent="TutorialView" instance=ExtResource("14_mhrhf")]
position = Vector2(444, 196)
scale = Vector2(4, 4)

[node name="Corridor" type="Node2D" parent="."]
position = Vector2(157, 35)
metadata/_edit_group_ = true

[node name="Background" type="AnimatedSprite2D" parent="Corridor"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_umtbs")
animation = &"corridor"
autoplay = "corridor"
frame_progress = 0.250759
centered = false

[node name="Nav3" type="TextureButton" parent="Corridor"]
offset_left = 35.0
offset_top = 401.0
offset_right = 117.0
offset_bottom = 443.0
texture_normal = ExtResource("12_pq630")
texture_hover = ExtResource("5_i6gpn")
flip_h = true
script = ExtResource("11_vpbg2")
location = "corridor"
destination = "tutorial"

[node name="DoorClick1" type="Control" parent="Corridor"]
layout_mode = 3
anchors_preset = 0
offset_left = 259.0
offset_top = 227.0
offset_right = 443.0
offset_bottom = 482.0

[node name="DoorClick2" type="Control" parent="Corridor"]
layout_mode = 3
anchors_preset = 0
offset_left = 609.0
offset_top = 244.0
offset_right = 787.0
offset_bottom = 472.0
